# cookiecutter-python-package

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: command_line.py
{{cookiecutter.project_slug}}/tests/: test_version.py
