[project]
name = "{{ cookiecutter.project_slug }}"
authors = [
    {name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}"},
]
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "{{ cookiecutter.open_source_license }}"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.command_line:main"

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]

[tool.setuptools_scm]
version_file = "src/{{ cookiecutter.project_slug }}/_version.py"